--- a/src/main/resources/public/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/scss/template/_file-uploader.scss
@@ -58,11 +58,14 @@
           color: $dropzone-font-color;
           text-align: center;
           // 아이콘
-          .icon-no-file {
-            display: block;
-            height: 2.813rem; // 45px
-            @include backgroundImage($icon-folder-path + 'icon-no-file.svg', 2.438rem 2.813rem, no-repeat, center, center, null); // 39px 45px
-            margin-bottom: 1.25rem; // 20px
+          .#{$common-prefix}icon {
+            &.i-no-file {
+              display: block;
+              height: 2.813rem; // 45px
+              background: $dropzone-font-color;
+              @include maskImage('#{$icon-folder-path}icon-no-file.svg', 100%, 2.813rem, no-repeat, center);
+              margin-bottom: 1.25rem; // 20px
+            }
           }
           // or brows 영역
           .add-file-button-wrap {
