문서함 카운트 글자색 변경 - 디자인팀 의견 적용

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3336,7 +3336,7 @@ table[id=documentDisplay] td {
   font-size: 0.688rem;
   font-weight: 500;
   background-color: #63686C;
-  color: #F6F8FA;
+  color: #ABB0B5;
 }
 .z-gnb .z-menu-area .z-gnb .z-token-count.z-active {
   color: #FFFFFF;
