#11013 스케줄러 등록시 실행타입에 따른 안내 모달 작성 -> MR 응대

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2855,6 +2855,10 @@ table[id=documentDisplay] td {
   display: inline-block;
 }
 
+.hidden-scrollbar {
+  overflow: hidden;
+}
+
 .notice-header,
 .faq-header,
 .download-header,
