--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -90,6 +90,11 @@
   display: inline-block;
 }
 
+// 스크롤 바 제거
+.hidden-scrollbar {
+  overflow: hidden;
+}
+
 /////////////////////////////////////////////// 헤더 ////////////////////////////////////////////////////////
 // 공지사항, FAQ, 자료실, 게시판, 사용자 정의 차트
 // 시스템관리 > 사용자, 게시판
