--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="flex-column z-edit">
+    <div class="flex-column z-edit hidden-scrollbar">
         <div class="scheduler-header">
             <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{scheduler.label.schedule}"></h1>
